# mem5_game

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  TODO.md  rustfmt.toml
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/doc/: aliases.js  search-index.js  settings.html
docs/doc/mem5/: all.html  fn.__wasm_bindgen_generated_run.html  fn.ordinal_numbers.html  fn.run.html  fn.session_storage.html  index.html  sidebar-items.js
docs/doc/mem5_common/: constant._IMPL_SERIALIZE_FOR_GameStatus.html  constant._IMPL_SERIALIZE_FOR_WsMessage.html  enum.WsMessage.html
docs/doc/mem5_server/: all.html  fn.enable_ansi_support.html  fn.receive_message.html  fn.send_to_other_players.html  fn.user_connected.html  fn.user_disconnected.html  index.html  sidebar-items.js  type.Users.html
docs/mem5/: all.html  fn.__wasm_bindgen_generated_run.html  fn.ordinal_numbers.html  fn.run.html  fn.session_storage.html  index.html  sidebar-items.js
docs/mem5/ackmsgmod/: fn.prepare_for_ack_msg_waiting.html  fn.remove_ack_msg_from_queue.html  fn.send_ack.html  fn.send_msg_and_write_in_queue.html  index.html
docs/mem5/divcardmonikermod/: constant.GAME_TITLE.html  fn.calc_font_size.html  fn.div_grid_card_moniker.html  index.html  sidebar-items.js
docs/mem5/divfordebuggingmod/: fn.div_for_debugging.html  index.html
docs/mem5/divfullscreenmod/: fn.div_for_fullscreen.html  fn.div_fullscreen.html  fn.is_fullscreen.html  fn.is_iphone.html  index.html  sidebar-items.js
docs/mem5/divgametitlemod/: fn.div_game_title.html  index.html
docs/mem5/divgridcontainermod/: constant.SRC_FOR_CARD_FACE_DOWN.html  fn.div_grid_container.html  fn.div_grid_item.html  fn.div_grid_items.html  fn.grid_height.html  fn.grid_width.html  fn.max_grid_size.html  fn.play_sound.html  fn.usize_window_inner_height.html  fn.usize_window_inner_width.html  fn.usize_window_inner_width_but_max_600.html  index.html  sidebar-items.js
docs/mem5/divnicknamemod/: fn.div_nickname_input.html  fn.load_nickname.html  fn.save_nickname_to_localstorage.html  index.html
docs/mem5/divplayeractionsmod/: fn.div_player_actions_from_game_status.html  fn.div_unpredicted.html  index.html
docs/mem5/divplayersandscoresmod/: index.html  struct.PlayersAndScores.html
docs/mem5/divrulesanddescriptionmod/: constant.GAME_DESCRIPTION.html  constant.GAME_RULES.html  constant.GAME_RULES1.html  constant.GAME_RULES2.html  fn.text_with_br_newline.html  index.html  struct.RulesAndDescription.html
docs/mem5/fetchallimgsforcachemod/: fn.create_webrequest.html  fn.do_nothing.html  fn.fetch_all_img_for_cache_request.html  index.html
docs/mem5/fetchgameconfigmod/: fn.create_webrequest.html  fn.fetch_game_config_request.html  fn.set_game_config_from_json.html  index.html
docs/mem5/fetchgamesmetadatamod/: fn.create_webrequest.html  fn.fetch_games_metadata_request.html  fn.set_game_metadata_from_json.html  index.html
docs/mem5/fetchmod/: fn.fetch_response.html  index.html
docs/mem5/gamedatamod/: constant._IMPL_DESERIALIZE_FOR_Card.html  constant._IMPL_DESERIALIZE_FOR_CardStatusCardFace.html  constant._IMPL_DESERIALIZE_FOR_GameConfig.html  constant._IMPL_DESERIALIZE_FOR_GameMetadata.html  constant._IMPL_DESERIALIZE_FOR_GamesMetadata.html  constant._IMPL_DESERIALIZE_FOR_MsgInQueue.html  constant._IMPL_DESERIALIZE_FOR_Size2d.html  constant._IMPL_SERIALIZE_FOR_Card.html  constant._IMPL_SERIALIZE_FOR_CardStatusCardFace.html  constant._IMPL_SERIALIZE_FOR_GameConfig.html  constant._IMPL_SERIALIZE_FOR_GameMetadata.html  constant._IMPL_SERIALIZE_FOR_GamesMetadata.html  constant._IMPL_SERIALIZE_FOR_MsgInQueue.html  enum.CardStatusCardFace.html  (+11 more)
docs/mem5_common/: all.html  constant._IMPL_DESERIALIZE_FOR_GameStatus.html  constant._IMPL_DESERIALIZE_FOR_MsgAckKind.html  constant._IMPL_DESERIALIZE_FOR_Player.html  constant._IMPL_DESERIALIZE_FOR_WsMessage.html  constant._IMPL_SERIALIZE_FOR_GameStatus.html  constant._IMPL_SERIALIZE_FOR_MsgAckKind.html  constant._IMPL_SERIALIZE_FOR_Player.html  constant._IMPL_SERIALIZE_FOR_WsMessage.html  enum.GameStatus.html  enum.MsgAckKind.html  enum.WsMessage.html  index.html  struct.Player.html
docs/mem5_server/: all.html  fn.broadcast.html  fn.enable_ansi_support.html  fn.local_ip_get.html  fn.main.html  fn.receive_message.html  fn.send_to_other_players.html  fn.user_connected.html  fn.user_disconnected.html  index.html  type.Users.html
mem5/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json  rustfmt.toml
mem5/js/: javascriptdofullscreen.js  javascriptismobiledevice.js
mem5/src/: ackmsgmod.rs  divcardmoniker.rs  divcardmonikermod.rs  divfordebugging.rs  divfordebuggingmod.rs  divfullscreen.rs  divfullscreenmod.rs  divgametitlemod.rs  divgridcontainer.rs  divgridcontainermod.rs  divnicknamemod.rs  divplayeractions.rs  divplayeractionsmod.rs  divplayersandscores.rs  divplayersandscoresmod.rs  divrulesanddescription.rs  divrulesanddescriptionmod.rs  fetchallimgsforcachemod.rs  fetchgameconfig.rs  fetchgameconfigmod.rs  fetchgamesmetadatamod.rs  fetchgamesmod.rs  fetchmod.rs  gamedata.rs  gamedatamod.rs  javascriptimportmod.rs  lib.rs  localstoragemod.rs  logmod.rs  rootrenderingcomponent.rs  rootrenderingcomponentmod.rs  sessionstoragemod.rs  status1stcardmod.rs  status2ndcardmod.rs  statusgamedatainitmod.rs  statusgameovermod.rs  statusinviteaskbegin.rs  statusinviteaskbeginmod.rs  statusinviteasked.rs  statusinviteaskedmod.rs  (+20 more)
mem5_common/: Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json
mem5_common/src/: lib.rs
mem5_server/: Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json
mem5_server/src/: main.rs
webfolder/mem5/: index.html  main.js  manifest.json  on_load.js  service-worker.js  service_worker.js  start-service-worker.js  sw.js
(+354 files in other folders)
