[package]
name = "mem5"
version = "19.9.19" #no need for semver if it is not a public library
authors = ["Luciano Furlan <Luciano.Bestia@gmail.com>"]
edition = "2018"
description = "Learning Rust Wasm/WebAssembly with Virtual Dom Dodrio"
repository = "https://github.com/LucianoBestia/mem5_game"
readme = "README.md"
license = "MIT"
keywords = ["wasm","dodrio","virtual dom"]
categories = ["game","learning"]

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
unwrap = "1.2.1"
mem5_common = { path = "../mem5_common" }
dodrio = "0.1.0"
wasm-bindgen = { version = "0.2.43", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
rand = { version = "0.6", features = ["wasm-bindgen"] }
js-sys = "0.3"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0"
futures = "0.1.26"
wasm-bindgen-futures = "0.3.20"
log = "0.4.6"
strum = "0.15.0"
strum_macros = "0.15.0"
typed-html = {version="0.2.0", features = ["dodrio_macro"]}
conv = "0.3.3"

[dependencies.web-sys]
version = "0.3.20"
features = [
  "AbortController",
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "FormData",
  "Headers",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlImageElement",
  "HtmlAudioElement",
  "HtmlMediaElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "ReferrerPolicy",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Screen",
  "Storage",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.43"
