[package]
name = "mem5_common"
version = "2019.1231.1022" #no need for semver if it is not a library
description = "commons for mem5 wasm and server"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/mem5_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]
publish = false

[dependencies]
serde = "1.0.101"
serde_derive = "1.0.101"
#serde_json = "1.0"
#strum = "0.16.0"
strum_macros = "0.16.0"