[package]
name = "mem5_server"
version = "19.9.21" #no need for semver if it is not a library
description = "server for the game mem5 http + WebSocket on the same port"
authors = ["Luciano Bestia"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/mem5_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]

[dependencies]
mem5_common = { path = "../mem5_common" }
futures = "0.1"
log = "0.4.6"
env_logger = "0.6.1"
warp="0.1.15"
regex="1.1.6"
# cmd line input parameters
clap ="2.33.0"
# colorful output to screen
ansi_term = "0.11.0"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0"
unwrap = "1.2.1"
