[package]
name = "mem5_server"
version = "19.10.30-22.2" #no need for semver if it is not a library
description = "server for the game mem5 http + WebSocket on the same port"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/mem5_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]
publish = false

[dependencies]
mem5_common = { path = "../mem5_common" }
futures = "0.1"
log = "0.4.8"
env_logger = "0.7.1"
warp="0.1.20"
regex="1.3.1"
# cmd line input parameters
clap ="2.33.0"
# colorful output to screen
ansi_term = "0.12.1"
serde = "1.0.101"
serde_derive ="1.0.101"
serde_json = "1.0"
unwrap = "1.2.1"

